--- a/ChallengeDataObjects/ChallengeDataObjects.csproj
+++ b/ChallengeDataObjects/ChallengeDataObjects.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
