--- a/ChallengeDataObjects/config.json
+++ b/ChallengeDataObjects/config.json
@@ -1,3 +1,3 @@
 {
-  "connectionString": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+  "connectionString": "Server=tcp:api-sql.database.windows.net,1433;Initial Catalog=Challenge;Persist Security Info=False;User ID=juan-sql;Password=Fantasma@.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
