--- a/ChallengeDataObjects/ChallengeDataObjects.csproj
+++ b/ChallengeDataObjects/ChallengeDataObjects.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="config.json">
+    <None Update="config-app.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
